# kmcontrol

./: .dockerignore  .gitignore  docker-compose.yml  spec.md
deploy/: README.md  build-release-bundle.ps1  install.ps1  provision.ps1  tailscale-acl.hujson  unattend.xml
deploy/hub/: Dockerfile  README.md
kmc-admin/: index.html  package-lock.json  package.json  vite.config.ts
kmc-admin/src/: App.tsx  Dashboard.tsx  types.ts  videoRenderer.ts
kmc-admin/src-tauri/: Cargo.toml  tauri.conf.json
kmc-admin/src-tauri/examples/: audio_smoke.rs  input_smoke.rs  ws_smoke.rs
kmc-admin/src-tauri/src/: kbhook.rs  keyhook.rs  lib.rs  main.rs  stream.rs
kmc-admin/src/components/ui/: sonner.tsx
kmc-agent/: Cargo.toml
kmc-agent/src/: browser.rs  config.rs  cua.rs  exec.rs  main.rs  provision.rs  run.rs  sysstat.rs  tailscale.rs
kmc-hub/: Cargo.toml
kmc-hub/src/: admin_ws.rs  agent_ws.rs  db.rs  main.rs  routes.rs  state.rs  util.rs
kmc-keyhook/: Cargo.toml
kmc-keyhook/src/: main.rs
kmc-mcp/: Cargo.toml
kmc-mcp/src/: hub.rs  main.rs  server.rs
kmc-moonclient/: Cargo.toml
kmc-moonclient/examples/: hevc_probe.rs  pair_test.rs  reconnect_test.rs
kmc-moonclient/src/: conn.rs  crypto.rs  lib.rs  pair.rs
kmc-mooncommon/: CMakeLists.txt  Cargo.toml  build.rs
kmc-mooncommon/examples/: smoke.rs
kmc-mooncommon/src/: lib.rs
kmc-proto/: Cargo.toml
kmc-proto/src/: lib.rs
kmc-streamhost/: Cargo.toml  streamhost-clients.json
kmc-streamhost/.cargo/: config.toml
kmc-streamhost/src/: audio.rs  bitrate.rs  capture.rs  clients.rs  control.rs  crypto.rs  encoder.rs  gpu_encode.rs  gpuconvert.rs  host.rs  input.rs  lib.rs  qsv.rs  rtsp.rs  session.rs  state.rs  tls.rs  webserver.rs  xdevice.rs
kmc-streamhost/src/video/: mod.rs  packetizer.rs
