[package]
name = "kmc-mcp"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "MCP server exposing the kmc hub to AI assistants (Claude) — manage N laptops at once"

[[bin]]
name = "kmc-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "2", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
parking_lot = "0.12"
kmc-proto = { path = "../kmc-proto" }
