[package]
name = "kmc-moonclient"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "GameStream client: pairing + HTTP launch + moonlight-common-c connection driver"

[lib]
name = "kmc_moonclient"

[dependencies]
kmc-mooncommon = { path = "../kmc-mooncommon" }
anyhow = "1"
tracing = "0.1"
# HTTP + mutual TLS (client cert + pinned server cert)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "blocking"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
# crypto (pure rust, mirror of host)
aes = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
x509-parser = "0.16"
rand = "0.8"
hex = "0.4"
# XML parse (serverinfo / pairing responses)
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# H.264는 프론트(WebCodecs)가 GPU 디코드한다 — 클라이언트는 인코딩 AU만 전달(ffmpeg 불필요).
parking_lot = "0.12"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
