[package]
name = "kmc-admin"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "kmc_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
anyhow = "1"
kmc-proto = { path = "../../kmc-proto" }
kmc-moonclient = { path = "../../kmc-moonclient" }
# 프레임 디코드는 프론트(WebCodecs)가 GPU로 수행 — Rust측 이미지/ffmpeg 인코딩 불필요.

# 저수준 키보드 훅(윈도우키/한영키 등 시스템 키를 원격으로 그랩).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
